<resources>
    <string name="app_name">كتب ابراهيم السكران</string>
    <string name="bio">هو أبو عُمر، إبراهيم بن عمر بن إبراهيم السكران المشرف الوهبي التميمي، درس في جامعة الملك فهد للبترول والمعادن سنة واحدة، ثم تركها متوجهًا إلى كلية الشريعة في جامعة الإمام محمد بن سعود الإسلامية بالرياض وتخرج منها، نال درجة الماجستير في السياسة الشرعيّة من المعهد العالي للقضاء التابع لجامعة الإمام محمد بن سعود الإسلامية بالرياض، ثم توجه إلى بريطانيا ونال درجة الماجستير في القانون التجاري الدولي في جامعة إسكس بمدينة كولشيستر.

ظهر تحوّل إبراهيم السكران إلى الفكر السلفي عام 1428 هـ 2007 م
        في ورقة فكريّة انتشرَت وقتها إلكترونيًا، عنوانها: مآلات الخِطاب المدني، وقد أثارت هذه الورقة الكثير من المحسوبين على التيار التنويري. يقول السكران عن هذا التحول: "…وأنا أبرأ إلى الله من كل حرف خططته قبل ورقة مآلات الخطاب المدني، وأحذر كل شاب مسلم أن يغتر بمثل هذه المقالات التي كنت فيها ضحية الخطاب المدني المعاصر الذي يغالي في الحضارة والتسامح مع المخالف، وأنصح إخواني الذين لا زالوا مخدوعين بمثل هذه المفاهيم أن يعودوا للقرآن ويسبروا الطريق واضحا"
"

مؤلفاته
له عدة كتب منشورة وغير منشورة، ومطبوعة وغير مطبوعة، مِن المطبوع منها:

مآلات الخطاب المدني.
الطريق إلى القرآن.
رقائق القرآن.
مسلكيات.
سُلطة الثقافة الغالِبة.
التأويل الحداثي للتراث.
الماجريات.
الأسهم المُختلطة.
كما أجرى السكران العديد من البحوث عن تنظيم الدولة ومن أبرزها "مكتسبات أهل السنة والجماعة" و"منزلة المجاهدين عند تنظيم الدولة" و"قتل الأهل والأقارب عند تنظيم الدولة" و"رسالة إلى المنتسب لتنظيم الدولة".

    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    // Books name
    <string name="wayToquranBook"> الطريق إلى القرآن</string>
    <string name="openbio"> OpenBio </string>
    <string name="MalatBook">مآلات الخطاب المدني </string>
    <string name="MaslakeatBook">مسلكيات </string>
    <string name="RaqaqBook">رقائق القرآن</string>
    <string name="TawelBook">التأويل الحداثي للتراث</string>
    <string name="SoltaBook">سُلطة الثقافة الغالِبة </string>
    <string name="ShareApp">مشاركة التطبيق</string>
    <string name="MagariatBook">الماجريات</string>
    <string name="finishBook">انتهيت من الكتاب</string>
    <string name="splash">splash</string>

</resources>