<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <data>

   </data>

   <LinearLayout
       android:id="@+id/main"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:ignore="ExtraText">

      <ScrollView
          android:keepScreenOn="true"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          tools:ignore="UselessParent">

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:ignore="ScrollViewSize">

            <androidx.cardview.widget.CardView
                android:id="@+id/pic"
                android:background="#154F7E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OpenBio"
                tools:ignore="UsingOnClickInXml">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/bb"
                   android:contentDescription="@string/openbio" />

            </androidx.cardview.widget.CardView>

            <GridLayout
                android:background="#154F7E"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/pic"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:paddingBottom="15dp"
                android:layoutDirection="ltr"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:rowCount="4"
                tools:ignore="UnusedAttribute">

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="150dp"
                   android:id="@+id/malat"
                   android:onClick="openwayToquranBook"
                   android:layout_gravity="fill"
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:layout_margin="8dp"
                   app:cardCornerRadius="8dp"
                   app:cardElevation="8dp"
                   tools:ignore="UnusedAttribute,UsingOnClickInXml">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical|center_horizontal"
                      android:gravity="center"
                      android:orientation="vertical"
                      tools:ignore="UseCompoundDrawables">

                     <ImageView
                         android:layout_width="155dp"
                         android:layout_height="155dp"
                         android:onClick="openwayToquranBook"
                         android:src="@drawable/way"
                         tools:ignore="UsingOnClickInXml,VectorDrawableCompat"
                         android:contentDescription="@string/wayToquranBook" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/wayToquranBook"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/Black"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:gravity="center_horizontal" />
                  </LinearLayout>

               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="fill"
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:layout_margin="8dp"
                   app:cardCornerRadius="8dp"
                   app:cardElevation="8dp"
                   android:padding="5dp"
                   tools:ignore="UnusedAttribute">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical|center_horizontal"
                      android:gravity="center"
                      android:onClick="openMalatBook"
                      android:orientation="vertical"
                      tools:ignore="UsingOnClickInXml">

                     <ImageView
                         android:id="@+id/malat_pic"
                         android:layout_width="155dp"
                         android:layout_height="155dp"
                         android:background="@drawable/mm"
                         android:scaleType="fitCenter"
                         android:contentDescription="@string/MalatBook" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/MalatBook"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/Black"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         tools:ignore="RtlCompat" />

                  </LinearLayout>

               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:onClick="openMaslakeatBook"
                   android:layout_gravity="fill"
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:layout_margin="8dp"
                   app:cardCornerRadius="8dp"
                   app:cardElevation="8dp"
                   tools:ignore="UnusedAttribute,UsingOnClickInXml">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical|center_horizontal"
                      android:gravity="center"
                      android:orientation="vertical">

                     <ImageView
                         android:layout_width="155dp"
                         android:layout_height="155dp"
                         android:src="@drawable/masl"
                         android:scaleType="fitCenter"
                         tools:ignore="VectorDrawableCompat"
                         android:contentDescription="@string/MaslakeatBook" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/MaslakeatBook"
                         android:layout_marginTop="10dp"
                         android:textAlignment="center"
                         android:textColor="@color/Black"
                         android:textSize="15sp"
                         android:padding="5dp"
                         android:textStyle="bold"
                         tools:ignore="RtlCompat" />

                  </LinearLayout>
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:onClick="openRaqaqBook"
                   android:layout_gravity="fill"
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:layout_margin="8dp"
                   app:cardCornerRadius="8dp"
                   app:cardElevation="8dp"
                   tools:ignore="GridLayout,UsingOnClickInXml">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical|center_horizontal"
                      android:gravity="center"
                      android:orientation="vertical">

                     <ImageView
                         android:layout_width="155dp"
                         android:layout_height="155dp"
                         android:src="@drawable/raqq"
                         android:scaleType="fitCenter"
                         tools:ignore="VectorDrawableCompat"
                         android:contentDescription="@string/RaqaqBook" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/RaqaqBook"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/Black"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         android:padding="5dp"
                         android:textStyle="bold"
                         android:gravity="center_horizontal" />

                  </LinearLayout>
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:onClick="openTawelBook"
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:layout_margin="8dp"
                   app:cardCornerRadius="8dp"
                   app:cardElevation="8dp"
                   android:layout_gravity="fill"
                   tools:ignore="UsingOnClickInXml">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical|center_horizontal"
                      android:gravity="center"
                      android:orientation="vertical">

                     <ImageView
                         android:layout_width="155dp"
                         android:layout_height="155dp"
                         android:src="@drawable/tawel"
                         android:scaleType="fitCenter"
                         tools:ignore="VectorDrawableCompat"
                         android:contentDescription="@string/TawelBook" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/TawelBook"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/Black"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         tools:ignore="RtlCompat" />

                  </LinearLayout>
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_gravity="fill"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:onClick="openSultaBook"
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:layout_margin="8dp"
                   app:cardCornerRadius="8dp"
                   app:cardElevation="8dp"
                   tools:ignore="UnusedAttribute,UsingOnClickInXml">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical|center_horizontal"
                      android:gravity="center"
                      android:orientation="vertical">

                     <ImageView
                         android:layout_width="155dp"
                         android:layout_height="155dp"
                         android:src="@drawable/salta"
                         android:scaleType="fitCenter"
                         tools:ignore="VectorDrawableCompat"
                         android:contentDescription="@string/SoltaBook" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/SoltaBook"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/Black"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         tools:ignore="RtlCompat" />

                  </LinearLayout>
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:onClick="shareApp"
                   android:layout_margin="8dp"
                   app:cardCornerRadius="8dp"
                   app:cardElevation="8dp"
                   android:layout_gravity="fill"
                   tools:ignore="UnusedAttribute,UsingOnClickInXml">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical|center_horizontal"
                      android:gravity="center"
                      android:orientation="vertical">

                     <ImageView
                         android:layout_width="85dp"
                         android:layout_height="85dp"
                         android:src="@drawable/ic_baseline_share_24"
                         android:scaleType="fitCenter"
                         tools:ignore="VectorDrawableCompat"
                         android:contentDescription="@string/ShareApp" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/ShareApp"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/Black"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         tools:ignore="RtlCompat" />

                  </LinearLayout>
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:onClick="openMagariatBook"
                   android:layout_margin="8dp"
                   app:cardCornerRadius="8dp"
                   app:cardElevation="8dp"
                   android:layout_gravity="fill"
                   tools:ignore="UnusedAttribute,UsingOnClickInXml">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical|center_horizontal"
                      android:gravity="center"
                      android:orientation="vertical">

                     <ImageView
                         android:layout_width="155dp"
                         android:layout_height="155dp"
                         android:src="@drawable/mag"
                         android:scaleType="fitCenter"
                         tools:ignore="VectorDrawableCompat"
                         android:contentDescription="@string/MagariatBook" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/MagariatBook"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/Black"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         tools:ignore="RtlCompat" />

                  </LinearLayout>
               </androidx.cardview.widget.CardView>
            </GridLayout>
         </RelativeLayout>
      </ScrollView>
   </LinearLayout>
</layout>
